--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,107 @@
   padding: 0;
 }
 
-* {
+.page-header {
+  padding: 10px 0 13px;
+  text-align: center;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: white;
+  height: 112px;
+}
+
+.logo {
+  height: 60px;
+}
+
+.menu {
+  list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.menu-item {
+  margin-right: 20px;
+}
+
+.menu-link {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  font-size: 16px;
+  display: inline;
+}
+
+.menu-item:last-child {
+  margin-right: 0;
+}
+
+.logo-adalab {
+  margin-top: 10px;
 }
 
 * {
   margin: 0;
   padding: 0;
+}
+
+.footer-cierre {
+  height: 90px;
+  background-color: #252525;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.cierre {
+  font-size: 16px;
+  color: #676a6d;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.hero {
+  background-size: cover;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-image: url(../images/foto-hero.jpeg);
+  background-position: center top;
+}
+
+body {
+  font: 30px 'Rubik', sans-serif;
+  margin: 0;
+}
+
+.contenedor-hijo {
+  width: 161px;
+  height: 108px;
+  margin: 20px;
+}
+
+.titulo-principal {
+  word-spacing: 100vw;
+  text-align: left;
+  font-weight: bold;
+  color: #ffff;
+  font-size: 30px;
+  margin-left: 20px;
 }
 
 /*# sourceMappingURL=styles.css.map */
