--- a/scss/layers/_footer.scss
+++ b/scss/layers/_footer.scss
@@ -2,3 +2,16 @@
   margin:0;
   padding:0;
 }
+
+.footer-cierre {
+  height: 90px;
+  background-color: #252525;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.cierre {
+font-size: 16px;
+color: #676a6d;
+}
