--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ body {
 .contenedor-hijo {
   width: 161px;
   height: 108px;
-  margin: 20px;
+  margin-left: 20px;
 }
 
 .titulo-principal {
@@ -107,7 +107,35 @@ body {
   font-weight: bold;
   color: #ffff;
   font-size: 30px;
-  margin-left: 20px;
+}
+
+@media all and (min-width: 768px) {
+  .page-header {
+    padding: 20px 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .menu-nav {
+    margin: 0;
+  }
+
+  .titulo-principal {
+    font-size: 60px;
+  }
+
+  .contenedor-hijo {
+    margin-left: 30px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
