--- a/scss/layers/_header.scss
+++ b/scss/layers/_header.scss
@@ -48,3 +48,16 @@ font-size: 16px;
 .menu-nav {
   margin-top: 10px;
 }
+
+@media all and (min-width:768px) {
+	.page-header {
+		padding: 20px 50px;
+		display: flex;
+		justify-content: space-between;
+		box-sizing: border-box;
+		align-items: center;
+}
+.menu-nav {
+  margin:0;
+}
+}
