--- a/css/styles.css
+++ b/css/styles.css
@@ -88,17 +88,18 @@
   align-items: center;
   background-image: url(../images/foto-hero.jpeg);
   background-position: center top;
+  padding-left: 20px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-  font: 30px 'Rubik', sans-serif;
   margin: 0;
 }
 
 .contenedor-hijo {
   width: 161px;
   height: 108px;
-  margin-left: 20px;
 }
 
 .titulo-principal {
@@ -107,6 +108,7 @@ body {
   font-weight: bold;
   color: #ffff;
   font-size: 30px;
+  font-family: 'Rubik', sans-serif;
 }
 
 @media all and (min-width: 768px) {
@@ -133,8 +135,8 @@ body {
     font-size: 60px;
   }
 
-  .contenedor-hijo {
-    margin-left: 30px;
+  .hero {
+    padding-left: 30px;
   }
 }
 
