--- a/scss/layers/_header.scss
+++ b/scss/layers/_header.scss
@@ -35,6 +35,13 @@ text-decoration: none;
 text-transform: uppercase;
 color: #4a4a4a;
 font-size: 16px;
+font-family: 'Rubik', sans-serif;
+transition: color ease 1s, text-decoration ease 1s;
+}
+.menu-link:hover{
+  color:#32decf;
+  text-decoration: underline;
+
 
 }
 
