--- a/scss/layers/_header.scss
+++ b/scss/layers/_header.scss
@@ -63,6 +63,7 @@ transition: color ease 1s, text-decoration ease 1s;
 		justify-content: space-between;
 		box-sizing: border-box;
 		align-items: center;
+    font-family: 'Rubik', sans-serif;
 }
 .menu-nav {
   margin:0;
