--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ body {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    font-family: 'Rubik', sans-serif;
   }
 
   .menu-nav {
