--- a/scss/layers/_header.scss
+++ b/scss/layers/_header.scss
@@ -4,40 +4,47 @@
 }
 
 .page-header {
-padding:10px;
-text-align: center;
-width: 100%;
-position:fixed;
-left:0;
-top:0;
-background: white;
-height: 112px;
+  padding:10px;
+  text-align: center;
+  width: 100%;
+  position:fixed;
+  left:0;
+  top:0;
+  background: white;
+  height: 112px;
 
-}
+  }
+
+
 .logo {
   height: 60px;
 }
+
+
 .menu{
-list-style: none;
-margin:0;
-padding:0;
+  list-style: none;
+  margin:0;
+  padding:0;
 
 }
-.menu-item {
 
-display: inline;
+
+.menu-item {
+  display: inline;
   margin-right:20px;
 
 }
 
 .menu-link {
-text-decoration: none;
-text-transform: uppercase;
-color: #4a4a4a;
-font-size: 16px;
-font-family: 'Rubik', sans-serif;
-transition: color ease 1s, text-decoration ease 1s;
-}
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  font-size: 16px;
+  font-family: 'Rubik', sans-serif;
+  transition: color ease 1s, text-decoration ease 1s;
+  }
+
+
 .menu-link:hover{
   color:#32decf;
   text-decoration: underline;
@@ -51,10 +58,16 @@ transition: color ease 1s, text-decoration ease 1s;
 
 .logo-adalab {
   margin-top: 10px;
-}
+    }
+
+
 .menu-nav {
   margin-top: 10px;
-}
+
+    }
+
+
+// Mediaquesris:
 
 @media all and (min-width:768px) {
 	.page-header {
