--- a/scss/layers/_main.scss
+++ b/scss/layers/_main.scss
@@ -3,33 +3,29 @@
   padding:0;
    }
 
-
+   body {
+    margin:0;
+   }
 
 .hero {
 
-background-size: 170% 100%;
-height: 70vh;
-display:flex;
-align-items: center;
-margin-top: 112px;
+  background-size: 170% 100%;
+  height: 70vh;
+  display:flex;
+  align-items: center;
+  margin-top: 112px;
+  background-image: url(../images/foto-hero.jpeg);
+  background-position: center top;
+  padding-left: 20px;
+  box-sizing: border-box;
 
-background-image: url(../images/foto-hero.jpeg);
-background-position: center top;
-padding-left: 20px;
-box-sizing: border-box;
-}
-
-
-body{
-
-  margin:0;
-}
+  }
 
 .contenedor-hijo {
   width: 161px;
   height: 108px;
 
-}
+   }
 
 .titulo-principal{
 
@@ -40,20 +36,22 @@ body{
   font-size: 30px;
   font-family: 'Rubik', sans-serif;
 
+    }
 
-}
 
+// Mediaqueris para tablet y desktop:
 
 @media all and (min-width:768px) {
 
   .titulo-principal {
     font-size: 60px;
+    }
 
-  }
   .hero{
     padding-left: 30px;
     height: 834px;
     background-size: cover;
     background-position: center top;
   }
+
 }
