--- a/scss/layers/_header.scss
+++ b/scss/layers/_header.scss
@@ -38,7 +38,7 @@
 .menu-link {
   text-decoration: none;
   text-transform: uppercase;
-  color: #4a4a4a;
+  color: $color_menu_letter;
   font-size: 16px;
   font-family: 'Rubik', sans-serif;
   transition: color ease 1s, text-decoration ease 1s;
@@ -46,7 +46,7 @@
 
 
 .menu-link:hover{
-  color:#32decf;
+  color:$color_nav_hover;
   text-decoration: underline;
 
 
